volumes of meta updated

--- a/P003050.opf/meta.yml
+++ b/P003050.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W12842
   title: གཞི་གསུམ་གྱི་ཆོ་ག་སོགས་སོ་ཐར་བླང་དོར་མདོར་བསྡུས།
   author: ''
-  volumes: {}
+  volumes:
+    61b6fe1a4367459b9bf2bcd144afafe4:
+      image_group_id: I1KG8863
+      title: ''
+      volume_number: 1
+      total_pages: 92
