--- a/P003050.opf/layers/v001/Pagination.yml
+++ b/P003050.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: b551f3b406aa43769a2f3f48e4c7c9a2
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   8d2849f0a4a348138cb8e5b051c28dfd:
