--- a/P003050.opf/meta.yml
+++ b/P003050.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P003050
 initial_creation_type: ocr
+created_at: 24/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W12842
   title: གཞི་གསུམ་གྱི་ཆོ་ག་སོགས་སོ་ཐར་བླང་དོར་མདོར་བསྡུས།
