--- a/P003050.opf/meta.yml
+++ b/P003050.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P003050
 initial_creation_type: ocr
 created_at: 24/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:37:05.842245
 source_metadata:
   id: bdr:W12842
   title: གཞི་གསུམ་གྱི་ཆོ་ག་སོགས་སོ་ཐར་བླང་དོར་མདོར་བསྡུས།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 92
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
